--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+/* line 1, D:/daglob/www/kostromalesstroy.test/css/index.scss */
+.content {
+  overflow: hidden;
+}
 /* line 3, D:/daglob/www/kostromalesstroy.test/css/index.scss */
 .content h1 {
   font-size: 60px;
