--- a/css/main.scss
+++ b/css/main.scss
@@ -70,6 +70,9 @@ body {
         height: 60px;
         position: absolute;
         width: 100%;
+        .designGr{
+
+        }
       }
     }
   }
