--- a/css/main.css
+++ b/css/main.css
@@ -17,11 +17,11 @@ body .bodycontainer .documentcontainer .header {
   height: 70px;
   background-color: #f3f3f3;
 }
-/* line 17, D:/daglob/www/kostromalesstroy.test/css/main.scss */
+/* line 16, D:/daglob/www/kostromalesstroy.test/css/main.scss */
 body .bodycontainer .documentcontainer .header .mainmenu .navbar-brand {
   padding-left: 28px;
 }
-/* line 22, D:/daglob/www/kostromalesstroy.test/css/main.scss */
+/* line 21, D:/daglob/www/kostromalesstroy.test/css/main.scss */
 body .bodycontainer .documentcontainer .header .mainmenu ul li a {
   line-height: 70px;
   text-decoration: none;
@@ -30,22 +30,22 @@ body .bodycontainer .documentcontainer .header .mainmenu ul li a {
   font-size: 16px;
   padding: 0 8px;
 }
-/* line 32, D:/daglob/www/kostromalesstroy.test/css/main.scss */
+/* line 31, D:/daglob/www/kostromalesstroy.test/css/main.scss */
 body .bodycontainer .documentcontainer .header .mainmenu ul li.active a {
   text-decoration: underline;
 }
-/* line 40, D:/daglob/www/kostromalesstroy.test/css/main.scss */
+/* line 39, D:/daglob/www/kostromalesstroy.test/css/main.scss */
 body .bodycontainer .documentcontainer .header .informblock {
   height: 70px;
   margin-right: 60px;
 }
-/* line 43, D:/daglob/www/kostromalesstroy.test/css/main.scss */
+/* line 42, D:/daglob/www/kostromalesstroy.test/css/main.scss */
 body .bodycontainer .documentcontainer .header .informblock .phone {
   height: 35px;
   display: block;
   clear: both;
 }
-/* line 47, D:/daglob/www/kostromalesstroy.test/css/main.scss */
+/* line 46, D:/daglob/www/kostromalesstroy.test/css/main.scss */
 body .bodycontainer .documentcontainer .header .informblock .phone a {
   text-align: center;
   padding: 0 10px;
@@ -56,25 +56,25 @@ body .bodycontainer .documentcontainer .header .informblock .phone a {
   font-size: 22px;
   font-family: 'Trebuchet MS', Tahoma;
 }
-/* line 60, D:/daglob/www/kostromalesstroy.test/css/main.scss */
+/* line 59, D:/daglob/www/kostromalesstroy.test/css/main.scss */
 body .bodycontainer .documentcontainer .content {
-  margin: 0 auto;
+  margin: 0 auto 60px;
   width: 960px;
   min-height: 100%;
   font-size: 16px;
   font-family: Helvetica;
 }
-/* line 67, D:/daglob/www/kostromalesstroy.test/css/main.scss */
+/* line 66, D:/daglob/www/kostromalesstroy.test/css/main.scss */
 body .bodycontainer .documentcontainer .footer {
   background-color: #000000;
   bottom: 0;
   height: 60px;
-  position: absolute;
+  position: fixed;
   width: 100%;
 }
 
 /* DEBUG CONSTRUCT */
-/* line 82, D:/daglob/www/kostromalesstroy.test/css/main.scss */
+/* line 81, D:/daglob/www/kostromalesstroy.test/css/main.scss */
 pre {
   background-color: lightgrey;
   color: #000000;
